--- a/example.env
+++ b/example.env
@@ -18,10 +18,10 @@ BROKER="local IP for your MQTT broker"
 PORT="port to use, i.e. 1883"
 CLIENT_ID="client ID to use, i.e. Garage_Pi"
 #Control topics
-TOPIC_PREVENT_NON_SOLAR_CHARGE="garagepi/prevent_non_solar_charge"	Control topic to add to HomeAssistant
-TOPIC_TESLAMATE_GEOFENCE = "teslamate/cars/2/geofence"				Alter number after "cars" as needed for your Teslamate install
-TOPIC_TESLAMATE_PLUGGED_IN = "teslamate/cars/2/plugged_in"			Alter number after "cars" as needed for your Teslamate install
-TOPIC_TESLAMATE_BATTERY_LEVEL = "teslamate/cars/2/battery_level"	Alter number after "cars" as needed for your Teslamate install
+TOPIC_PREVENT_NON_SOLAR_CHARGE="garagepi/prevent_non_solar_charge"
+TOPIC_TESLAMATE_GEOFENCE = "teslamate/cars/$car_id/geofence"
+TOPIC_TESLAMATE_PLUGGED_IN = "teslamate/cars/$car_id/plugged_in"
+TOPIC_TESLAMATE_BATTERY_LEVEL = "teslamate/cars/$car_id/battery_level"
 #Status topics
 TOPIC_STATUS="garagepi/status"
 TOPIC_CHARGE_RATE="garagepi/new_charge_rate"
