--- a/example.env
+++ b/example.env
@@ -4,24 +4,24 @@ EGUSR="eGauge username"
 EGPWD="eGauge password"
 EGAUGE_GEN="eGauge generation register, i.e. gen"
 EGAUGE_USE="eGauge usage register, i.e. use"
-EGAUGE_CHARGER="eGauge register for your Tesla Charger"
+EGAUGE_CHARGER="eGauge register name for your Tesla Charger"
 EGAUGE_CHARGER_SENSOR="eGauge sensor for your Tesla Charger, i.e. S6"
 
 #Tesla Vehicle Command parameters
 export TESLA_KEY_NAME='user name used to generate key, i.e. pi'
 export TESLA_VIN='Tesla VIN'
 export TESLA_KEY_FILE='private key location, i.e. /home/pi/.local/share/keyrings/private_key.pem'
-TESLA_CONTROL_BIN='Tesla control bin, i.e. /home/pi/go/bin/tesla-control'
+TESLA_CONTROL_BIN='Tesla control bin location, i.e. /home/pi/go/bin/tesla-control'
 
 #MQTT parameters
 BROKER="local IP for your MQTT broker"
 PORT="port to use, i.e. 1883"
 CLIENT_ID="client ID to use, i.e. Garage_Pi"
 #Control topics
-TOPIC_PREVENT_NON_SOLAR_CHARGE="garagepi/prevent_non_solar_charge"
+TOPIC_PREVENT_NON_SOLAR_CHARGE="topic_base/prevent_non_solar_charge"
 TOPIC_TESLAMATE_GEOFENCE = "teslamate/cars/$car_id/geofence"
 TOPIC_TESLAMATE_PLUGGED_IN = "teslamate/cars/$car_id/plugged_in"
 TOPIC_TESLAMATE_BATTERY_LEVEL = "teslamate/cars/$car_id/battery_level"
 #Status topics
-TOPIC_STATUS="garagepi/status"
-TOPIC_CHARGE_RATE="garagepi/new_charge_rate"
+TOPIC_STATUS="topic_base/status"
+TOPIC_CHARGE_RATE="topic_base/new_charge_rate"
