Adjusted example_config.toml to reflect the previous default state of False (hard coded in routines.py) for prevent_non_solar_charge

--- a/example_config.toml
+++ b/example_config.toml
@@ -1,7 +1,7 @@
 # Configuration file
-LOG_FILE = 'PVCharge.log'          # Log file name to use
-LOG_LEVEL = "INFO"                 # Default INFO, change to DEBUG to diagnose issues
-PREVENT_NON_SOLAR_CHARGE = "True"  # Default for after-hours charging, unless changed via MQTT
+LOG_FILE = 'PVCharge.log'           # Log file name to use
+LOG_LEVEL = "INFO"                  # Default INFO, change to DEBUG to diagnose issues
+PREVENT_NON_SOLAR_CHARGE = "False"  # Default for after-hours charging, unless changed via MQTT
 
 # MQTT Control topics
 TOPIC_PREVENT_NON_SOLAR_CHARGE = "topic_base/prevent_non_solar_charge"
