--- a/example_config.toml
+++ b/example_config.toml
@@ -5,6 +5,7 @@ PREVENT_NON_SOLAR_CHARGE = "False"  # Default for after-hours charging, unless c
 
 # MQTT Control topics
 TOPIC_PREVENT_NON_SOLAR_CHARGE =   "topic_base/prevent_non_solar_charge"
+TOPIC_CHARGE_DELAY =               "topic_base/charge_delay"    # Commands: "delay" = delay charge for 1 hour, ## = minutes to delay charge, (other text, i.e. "cancel") = resume normal charge
 TOPIC_TESLAMATE_GEOFENCE =         "teslamate/cars/$car_id/geofence"
 TOPIC_TESLAMATE_PLUGGED_IN =       "teslamate/cars/$car_id/plugged_in"
 TOPIC_TESLAMATE_BATTERY_LEVEL =    "teslamate/cars/$car_id/battery_level"
