--- a/example.env
+++ b/example.env
@@ -13,7 +13,7 @@ export TESLA_VIN='Tesla VIN'
 export TESLA_KEY_FILE='private key location, i.e. /home/pi/.local/share/keyrings/private_key.pem'
 TESLA_CONTROL_BIN='Tesla control bin location, i.e. /home/pi/go/bin/tesla-control'
 
-#TeslaBleHttpProxy parameters
+#TeslaBleHttpProxy parameters (optional, enabled in config.toml)
 PROXY_HOST='proxy local ip:8080'
 
 #MQTT parameters
