Added new method based on time to consider car not at home

--- a/example_config.toml
+++ b/example_config.toml
@@ -24,3 +24,4 @@ FAST_POLLING = 2         # Charging enabled, loop delay (seconds)
 DELAYED_START_TIME = 10	 # When Energy is Available how long do we wait before starting charge (seconds)
 DELAYED_STOP_TIME = 90   # When Available Energy is Reduced how long do we wait before stopping charge (seconds)
 REPORT_DELAY = 60        # Send status string to MQTT every x (seconds)
+HOME_TIMEOUT = 600       # How long after last contact until we consider car not Home (seconds)
